# gstreamer-sdk__snappy

./: Makefile.in  aclocal.m4  config.h.in  configure  configure.ac
data/: Makefile.in
src/: Makefile.am  Makefile.in  user_interface.c
